feat: wip design

--- a/blog/h/input-monitor.mdx
+++ b/blog/h/input-monitor.mdx
@@ -1,7 +1,8 @@
 ---
-  author: "Yu"
+  author: "H"
   date: "2022-07-28"
   title: "自制输入模拟器"
+  tag: "js"
 ---
 
 import InputMonitor from 'Components/input-monitor'
