--- a/blog/h/sphere.mdx
+++ b/blog/h/sphere.mdx
@@ -1,7 +1,8 @@
 ---
-  author: "Yu"
+  author: "H"
   date: "2022-07-30"
   title: "自制球体卡片环绕"
+  tag: "css"
 ---
 
 import Sphere from 'Components/sphere'
