--- a/blog/h/masonry.mdx
+++ b/blog/h/masonry.mdx
@@ -1,7 +1,8 @@
 ---
-  author: "Yu"
+  author: "H"
   date: "2022-07-28"
   title: "自制瀑布流布局"
+  tag: "js"
 ---
 
 import Masonry from 'Components/masonry'
