--- a/blog/h/transition.mdx
+++ b/blog/h/transition.mdx
@@ -1,7 +1,8 @@
 ---
-  author: "Yu"
+  author: "H"
   date: "2022-08-02"
-  title: css transform transition 
+  title: "css transform transition"
+  tag: "css"
 ---
 
 import Demo from 'Demos/transition-monitor'
