--- a/blog/h/sphere.mdx
+++ b/blog/h/sphere.mdx
@@ -10,10 +10,8 @@ import ArticleAbstract from 'Components/article-abstract'
 
 # 自制球体卡片环绕
 
-这是一个自制球体卡片的例子这是一个自制球体卡片的例子这是一个自制球体卡片的例子这是一个自制球体卡片的例子这是一个自制球体卡片的例子这是一个自制球体卡片的例子
-
 <Sphere radius={350} total={12} className="flex items-center justify-center h-screen">
   {new Array(12).fill(undefined).map((_, i) => (
-    <ArticleAbstract key={i} className="w-40 h-40 bg-red-300" />
+    <ArticleAbstract key={i} className="w-40 h-40 bg-red-300" content={' '} />
   ))}
 </Sphere>
